--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@
 
 annotated-types==0.7.0
     # via pydantic
-anyio==4.9.0
+anyio==4.11.0
     # via
     #   httpx
     #   starlette
@@ -15,24 +15,24 @@ attrs==25.3.0
     # via hypothesis
 autoflake==2.3.1
     # via ariadne-codegen
-black==25.1.0
+black==25.9.0
     # via ariadne-codegen
 blinker==1.9.0
     # via flask
-cachetools==5.5.2
+cachetools==6.2.0
     # via google-auth
-certifi==2025.7.14
+certifi==2025.8.3
     # via
     #   httpcore
     #   httpx
     #   requests
-cffi==1.17.1
+cffi==2.0.0
     # via
     #   cryptography
     #   pynacl
-charset-normalizer==3.4.2
+charset-normalizer==3.4.3
     # via requests
-click==8.2.1
+click==8.3.0
     # via
     #   ariadne-codegen
     #   black
@@ -42,19 +42,17 @@ click==8.2.1
     #   uvicorn
 cloudevents==1.11.0
     # via functions-framework
-cryptography==45.0.5
+cryptography==46.0.2
     # via pyjwt
-deprecated==1.2.18
-    # via pygithub
 deprecation==2.1.0
     # via cloudevents
 firecloud-api-cds==0.2.0
     # via
     #   depmap-omics-wgs (pyproject.toml)
     #   nebelung
-flask==3.1.1
+flask==3.1.2
     # via functions-framework
-functions-framework==3.9.1
+functions-framework==3.9.2
     # via depmap-omics-wgs (pyproject.toml)
 google-api-core==2.25.1
     # via
@@ -63,7 +61,7 @@ google-api-core==2.25.1
     #   google-cloud-logging
     #   google-cloud-secret-manager
     #   google-cloud-storage
-google-auth==2.40.3
+google-auth==2.41.1
     # via
     #   firecloud-api-cds
     #   google-api-core
@@ -84,7 +82,7 @@ google-cloud-logging==3.12.1
     # via depmap-omics-wgs (pyproject.toml)
 google-cloud-secret-manager==2.24.0
     # via depmap-omics-wgs (pyproject.toml)
-google-cloud-storage==3.2.0
+google-cloud-storage==3.4.0
     # via
     #   depmap-omics-wgs (pyproject.toml)
     #   firecloud-api-cds
@@ -106,13 +104,13 @@ grpc-google-iam-v1==0.14.2
     # via
     #   google-cloud-logging
     #   google-cloud-secret-manager
-grpcio==1.74.0
+grpcio==1.75.1
     # via
     #   google-api-core
     #   googleapis-common-protos
     #   grpc-google-iam-v1
     #   grpcio-status
-grpcio-status==1.74.0
+grpcio-status==1.75.1
     # via google-api-core
 gunicorn==23.0.0
     # via
@@ -126,7 +124,7 @@ httpcore==1.0.9
     # via httpx
 httpx==0.28.1
     # via ariadne-codegen
-hypothesis==6.136.3
+hypothesis==6.140.2
     # via pandera
 idna==3.10
     # via
@@ -135,15 +133,15 @@ idna==3.10
     #   requests
 importlib-metadata==8.7.0
     # via opentelemetry-api
-isort==6.0.1
+isort==6.1.0
     # via ariadne-codegen
 itsdangerous==2.2.0
     # via flask
 jinja2==3.1.6
     # via flask
-markdown-it-py==3.0.0
+markdown-it-py==4.0.0
     # via rich
-markupsafe==3.0.2
+markupsafe==3.0.3
     # via
     #   flask
     #   jinja2
@@ -156,13 +154,13 @@ mypy-extensions==1.1.0
     # via
     #   black
     #   typing-inspect
-nebelung==2.9.6
+nebelung==2.12.0
     # via depmap-omics-wgs (pyproject.toml)
-numpy==2.3.2
+numpy==2.3.3
     # via
     #   pandas
     #   pandera
-opentelemetry-api==1.35.0
+opentelemetry-api==1.37.0
     # via google-cloud-logging
 packaging==25.0
     # via
@@ -170,7 +168,7 @@ packaging==25.0
     #   deprecation
     #   gunicorn
     #   pandera
-pandas==2.3.1
+pandas==2.3.3
     # via
     #   depmap-omics-wgs (pyproject.toml)
     #   nebelung
@@ -186,7 +184,7 @@ pd-flatten==0.1.2
     # via
     #   depmap-omics-wgs (pyproject.toml)
     #   nebelung
-platformdirs==4.3.8
+platformdirs==4.4.0
     # via black
 proto-plus==1.26.1
     # via
@@ -194,7 +192,7 @@ proto-plus==1.26.1
     #   google-cloud-appengine-logging
     #   google-cloud-logging
     #   google-cloud-secret-manager
-protobuf==6.31.1
+protobuf==6.32.1
     # via
     #   google-api-core
     #   google-cloud-appengine-logging
@@ -211,9 +209,9 @@ pyasn1==0.6.1
     #   rsa
 pyasn1-modules==0.4.2
     # via google-auth
-pycparser==2.22
+pycparser==2.23
     # via cffi
-pydantic==2.11.7
+pydantic==2.11.9
     # via
     #   depmap-omics-wgs (pyproject.toml)
     #   ariadne-codegen
@@ -225,7 +223,7 @@ pydot==4.0.1
     # via firecloud-api-cds
 pyflakes==3.4.0
     # via autoflake
-pygithub==2.6.1
+pygithub==2.8.1
     # via
     #   depmap-omics-wgs (pyproject.toml)
     #   nebelung
@@ -233,22 +231,24 @@ pygments==2.19.2
     # via rich
 pyjwt==2.10.1
     # via pygithub
-pynacl==1.5.0
+pynacl==1.6.0
     # via pygithub
-pyparsing==3.2.3
+pyparsing==3.2.5
     # via pydot
 python-dateutil==2.9.0.post0
     # via pandas
 python-dotenv==1.1.1
     # via depmap-omics-wgs (pyproject.toml)
+pytokens==0.1.10
+    # via black
 pytz==2025.2
     # via pandas
-requests==2.32.4
+requests==2.32.5
     # via
     #   google-api-core
     #   google-cloud-storage
     #   pygithub
-rich==14.0.0
+rich==14.1.0
     # via typer
 rsa==4.9.1
     # via google-auth
@@ -262,7 +262,7 @@ sniffio==1.3.1
     # via anyio
 sortedcontainers==2.4.0
     # via hypothesis
-starlette==0.47.2
+starlette==0.48.0
     # via functions-framework
 toml==0.10.2
     # via ariadne-codegen
@@ -270,11 +270,12 @@ tqdm==4.67.1
     # via depmap-omics-wgs (pyproject.toml)
 typeguard==4.4.4
     # via pandera
-typer==0.16.0
+typer==0.19.2
     # via depmap-omics-wgs (pyproject.toml)
-typing-extensions==4.14.1
+typing-extensions==4.15.0
     # via
     #   anyio
+    #   grpcio
     #   opentelemetry-api
     #   pydantic
     #   pydantic-core
@@ -286,7 +287,7 @@ typing-extensions==4.14.1
     #   typing-inspection
 typing-inspect==0.9.0
     # via pandera
-typing-inspection==0.4.1
+typing-inspection==0.4.2
     # via pydantic
 tzdata==2025.2
     # via pandas
@@ -294,11 +295,11 @@ urllib3==2.5.0
     # via
     #   pygithub
     #   requests
-uvicorn==0.35.0
+uvicorn==0.37.0
     # via
     #   functions-framework
     #   uvicorn-worker
-uvicorn-worker==0.3.0
+uvicorn-worker==0.4.0
     # via functions-framework
 watchdog==6.0.0
     # via functions-framework
@@ -306,9 +307,7 @@ werkzeug==3.1.3
     # via
     #   flask
     #   functions-framework
-wrapt==1.17.2
-    # via
-    #   deprecated
-    #   pandera
+wrapt==1.17.3
+    # via pandera
 zipp==3.23.0
     # via importlib-metadata
