add giab-dev branch for call_structural_variants

--- a/.dockstore.yml
+++ b/.dockstore.yml
@@ -41,6 +41,7 @@ workflows:
       branches:
         - main
         - develop
+        - giab-dev
     publish: True
   - subclass: WDL
     name: annotate_structural_variants
