--- a/.github/workflows/run_checks.yml
+++ b/.github/workflows/run_checks.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Python 3.13
         uses: actions/setup-python@v5
         with:
-          python-version: "3.13"
+          python-version-file: '.python-version'
           cache: "pip"  # For uv's underlying pip calls
 
       - name: Install uv
@@ -37,12 +37,6 @@ jobs:
       - name: Install dependencies
         run: |
           uv sync
-
-      - name: Debug environment
-        run: |
-          which python
-          which uv
-          uv pip list
 
       - name: Run pyright
         run: uv run pyright
