--- a/requirements.txt
+++ b/requirements.txt
@@ -5,23 +5,21 @@
 
 annotated-types==0.7.0
     # via pydantic
-anyio==4.11.0
+anyio==4.12.0
     # via
     #   httpx
     #   starlette
 ariadne-codegen==0.14.0
     # via depmap-omics-wgs (pyproject.toml)
-attrs==25.4.0
-    # via hypothesis
 autoflake==2.3.1
     # via ariadne-codegen
-black==25.9.0
+black==25.12.0
     # via ariadne-codegen
 blinker==1.9.0
     # via flask
-cachetools==6.2.0
+cachetools==6.2.4
     # via google-auth
-certifi==2025.10.5
+certifi==2026.1.4
     # via
     #   httpcore
     #   httpx
@@ -30,9 +28,9 @@ cffi==2.0.0
     # via
     #   cryptography
     #   pynacl
-charset-normalizer==3.4.3
+charset-normalizer==3.4.4
     # via requests
-click==8.3.0
+click==8.3.1
     # via
     #   ariadne-codegen
     #   black
@@ -40,9 +38,9 @@ click==8.3.0
     #   functions-framework
     #   typer
     #   uvicorn
-cloudevents==1.11.0
+cloudevents==1.12.0
     # via functions-framework
-cryptography==46.0.2
+cryptography==46.0.3
     # via pyjwt
 deprecation==2.1.0
     # via cloudevents
@@ -52,16 +50,16 @@ firecloud-api-cds==0.2.0
     #   nebelung
 flask==3.1.2
     # via functions-framework
-functions-framework==3.9.2
+functions-framework==3.10.0
     # via depmap-omics-wgs (pyproject.toml)
-google-api-core==2.25.2
+google-api-core==2.28.1
     # via
     #   google-cloud-appengine-logging
     #   google-cloud-core
     #   google-cloud-logging
     #   google-cloud-secret-manager
     #   google-cloud-storage
-google-auth==2.41.1
+google-auth==2.45.0
     # via
     #   firecloud-api-cds
     #   google-api-core
@@ -70,47 +68,49 @@ google-auth==2.41.1
     #   google-cloud-logging
     #   google-cloud-secret-manager
     #   google-cloud-storage
-google-cloud-appengine-logging==1.6.2
+google-cloud-appengine-logging==1.7.0
     # via google-cloud-logging
-google-cloud-audit-log==0.3.3
+google-cloud-audit-log==0.4.0
     # via google-cloud-logging
-google-cloud-core==2.4.3
+google-cloud-core==2.5.0
     # via
     #   google-cloud-logging
     #   google-cloud-storage
-google-cloud-logging==3.12.1
+google-cloud-logging==3.13.0
     # via depmap-omics-wgs (pyproject.toml)
-google-cloud-secret-manager==2.24.0
+google-cloud-secret-manager==2.26.0
     # via depmap-omics-wgs (pyproject.toml)
-google-cloud-storage==3.4.0
+google-cloud-storage==3.7.0
     # via
     #   depmap-omics-wgs (pyproject.toml)
     #   firecloud-api-cds
-google-crc32c==1.7.1
+google-crc32c==1.8.0
     # via
     #   google-cloud-storage
     #   google-resumable-media
-google-resumable-media==2.7.2
+google-resumable-media==2.8.0
     # via google-cloud-storage
-googleapis-common-protos==1.70.0
+googleapis-common-protos==1.72.0
     # via
     #   google-api-core
     #   google-cloud-audit-log
     #   grpc-google-iam-v1
     #   grpcio-status
-graphql-core==3.2.6
+graphql-core==3.2.7
     # via ariadne-codegen
-grpc-google-iam-v1==0.14.2
+grpc-google-iam-v1==0.14.3
     # via
     #   google-cloud-logging
     #   google-cloud-secret-manager
-grpcio==1.75.1
+grpcio==1.76.0
     # via
     #   google-api-core
+    #   google-cloud-appengine-logging
+    #   google-cloud-secret-manager
     #   googleapis-common-protos
     #   grpc-google-iam-v1
     #   grpcio-status
-grpcio-status==1.75.1
+grpcio-status==1.76.0
     # via google-api-core
 gunicorn==23.0.0
     # via
@@ -124,16 +124,16 @@ httpcore==1.0.9
     # via httpx
 httpx==0.28.1
     # via ariadne-codegen
-hypothesis==6.140.3
+hypothesis==6.149.0
     # via pandera
-idna==3.10
+idna==3.11
     # via
     #   anyio
     #   httpx
     #   requests
-importlib-metadata==8.7.0
+importlib-metadata==8.7.1
     # via opentelemetry-api
-isort==6.1.0
+isort==7.0.0
     # via ariadne-codegen
 itsdangerous==2.2.0
     # via flask
@@ -154,13 +154,13 @@ mypy-extensions==1.1.0
     # via
     #   black
     #   typing-inspect
-nebelung==2.12.1
+nebelung==2.12.5
     # via depmap-omics-wgs (pyproject.toml)
-numpy==2.3.3
+numpy==2.4.0
     # via
     #   pandas
     #   pandera
-opentelemetry-api==1.37.0
+opentelemetry-api==1.39.1
     # via google-cloud-logging
 packaging==25.0
     # via
@@ -184,15 +184,15 @@ pd-flatten==0.1.2
     # via
     #   depmap-omics-wgs (pyproject.toml)
     #   nebelung
-platformdirs==4.4.0
+platformdirs==4.5.1
     # via black
-proto-plus==1.26.1
+proto-plus==1.27.0
     # via
     #   google-api-core
     #   google-cloud-appengine-logging
     #   google-cloud-logging
     #   google-cloud-secret-manager
-protobuf==6.32.1
+protobuf==6.33.2
     # via
     #   google-api-core
     #   google-cloud-appengine-logging
@@ -211,13 +211,13 @@ pyasn1-modules==0.4.2
     # via google-auth
 pycparser==2.23
     # via cffi
-pydantic==2.12.0
+pydantic==2.12.5
     # via
     #   depmap-omics-wgs (pyproject.toml)
     #   ariadne-codegen
     #   nebelung
     #   pandera
-pydantic-core==2.41.1
+pydantic-core==2.41.5
     # via pydantic
 pydot==4.0.1
     # via firecloud-api-cds
@@ -231,15 +231,15 @@ pygments==2.19.2
     # via rich
 pyjwt==2.10.1
     # via pygithub
-pynacl==1.6.0
+pynacl==1.6.2
     # via pygithub
-pyparsing==3.2.5
+pyparsing==3.3.1
     # via pydot
 python-dateutil==2.9.0.post0
     # via pandas
-python-dotenv==1.1.1
+python-dotenv==1.2.1
     # via depmap-omics-wgs (pyproject.toml)
-pytokens==0.1.10
+pytokens==0.3.0
     # via black
 pytz==2025.2
     # via pandas
@@ -248,7 +248,7 @@ requests==2.32.5
     #   google-api-core
     #   google-cloud-storage
     #   pygithub
-rich==14.1.0
+rich==14.2.0
     # via typer
 rsa==4.9.1
     # via google-auth
@@ -258,11 +258,9 @@ six==1.17.0
     # via
     #   firecloud-api-cds
     #   python-dateutil
-sniffio==1.3.1
-    # via anyio
 sortedcontainers==2.4.0
     # via hypothesis
-starlette==0.48.0
+starlette==0.50.0
     # via functions-framework
 toml==0.10.2
     # via ariadne-codegen
@@ -270,7 +268,7 @@ tqdm==4.67.1
     # via depmap-omics-wgs (pyproject.toml)
 typeguard==4.4.4
     # via pandera
-typer==0.19.2
+typer==0.21.0
     # via depmap-omics-wgs (pyproject.toml)
 typing-extensions==4.15.0
     # via
@@ -289,13 +287,13 @@ typing-inspect==0.9.0
     # via pandera
 typing-inspection==0.4.2
     # via pydantic
-tzdata==2025.2
+tzdata==2025.3
     # via pandas
-urllib3==2.5.0
+urllib3==2.6.2
     # via
     #   pygithub
     #   requests
-uvicorn==0.37.0
+uvicorn==0.40.0
     # via
     #   functions-framework
     #   uvicorn-worker
@@ -303,11 +301,11 @@ uvicorn-worker==0.4.0
     # via functions-framework
 watchdog==6.0.0
     # via functions-framework
-werkzeug==3.1.3
+werkzeug==3.1.4
     # via
     #   flask
     #   functions-framework
-wrapt==1.17.3
+wrapt==2.0.1
     # via pandera
 zipp==3.23.0
     # via importlib-metadata
